@@ -49,6 +49,8 @@ Version 8.21
 12. Updated pcre-config so that it no longer shows -L/usr/lib, which seems
     best practice nowadays, and helps with cross-compiling. (If the exec_prefix 
     is anything other than /usr, -L is still shown). 
+    
+13. In non-UTF-8 mode, \C is now supported in lookbehinds and DFA matching.
 
 
 Version 8.20 21-Oct-2011
